--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 If you read this sentance, means I have successfully committed my second README file in GitHub :)
+Third committment:
+Command lines to upload:
+git add README
+git commit -m "third commit"
+git remote add origin git@github.com:xwang09/Hello-World (Only needed after first time commit)
+git push -u origin master
